--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,61 @@
 #app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
+    font-family: Avenir, Helvetica, Arial, sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-align: center;
+    color: #2c3e50;
+    margin-top: 60px;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Helvetica, sans-serif;
+    background: #333;
+}
+
+#container {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+#stage {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: block;
+    z-index: 0;
+}
+
+#logo {
+    position: absolute;
+    z-index: 1;
+    width: 245px;
+    height: 69px;
+    top: 0;
+    right: 15px;
+    background: #000;
+    padding: 10px 0;
+}
+
+.lil-gui.root {
+    top: 89px !important;
+    max-height: calc(100% - 89px);
+}
+
+.lil-gui .title {
+    color: #999;
+}
+
+.lil-gui.enabled .title {
+    color: #ea4080;
+}
+
+#logo img {
+    display: block;
+    margin: 8px auto 0;
+    width: 80%;
 }
